--- a/index.html
+++ b/index.html
@@ -165,10 +165,10 @@
               <button class="water">Eau</button>
             </li>
             <li>
-              <button class="ground">Terre</button>
+              <button class="ground">Sol</button>
             </li>
             <li>
-              <button class="rock">Pierre</button>
+              <button class="rock">Roche</button>
             </li>
           </ul>
         </div>
